added phoenix as a prefix

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,7 +35,8 @@ block content
       'Imperial': '禦',
       'Shining': '彪炳',
       'Sun': '太陽',
-      'Lunar': '太陰'
+      'Lunar': '太陰',
+      'Phoenix': '鳳'
     };
     var suffixes = {
       'Empire': '帝國',
